feat: Add distinct error messages and form options
- Split single message into missingResponseMessage and verificationFailedMessage
- Add constraint type check in validator
- Add form options: missing_response_message, verification_failed_message
- Add translations for 6 languages (en, fr, es, de, it, pt)

--- a/src/Resources/translations/validators.fr.yml
+++ b/src/Resources/translations/validators.fr.yml
@@ -1,1 +1,2 @@
-invalid_turnstile: Merci de cocher la case
+turnstile.missing_response: Veuillez compléter le défi de sécurité.
+turnstile.verification_failed: La vérification de sécurité a échoué. Veuillez réessayer.
