--- a/src/Resources/translations/validators.en.yml
+++ b/src/Resources/translations/validators.en.yml
@@ -1,1 +1,2 @@
-invalid_turnstile: Please tick the box
+turnstile.missing_response: Please complete the security challenge.
+turnstile.verification_failed: Security verification failed. Please try again.
